--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,14 +69,15 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0-beta01"
 
     //Room
-    implementation "androidx.room:room-runtime:2.2.6"
+    implementation 'androidx.room:room-ktx:2.2.6'
     kapt "androidx.room:room-compiler:2.2.6"
-
 
     //Utils
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+
+    kapt "androidx.room:room-compiler:2.2.6"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
